
- Allow gzip compression in high-level server response interface #403

- Rename TCPConnector.resolve and family to dns_cache #415

- Make UrlDispatcher ignore quoted characters during url matching #414
  Backward-compatibility warning: this may change the url matched by
  your queries if they send quoted characted (like %2F for /) #414

- Use optional cchardet accelerator if present #418


0.16.5 (06-13-2015)
-------------------

- Get rid of all comprehensions and yielding in _multidict #410


0.16.4 (06-13-2015)
-------------------

- Don't clear current exception in multidict's `__repr__` (cythonized
  versions) #410


0.16.3 (05-30-2015)
-------------------

- Fix StaticRoute vulnerability to directory traversal attacks #380


0.16.2 (05-27-2015)
-------------------

- Update python version required for `__del__` usage: it's actially
  3.4.1 instead of 3.4.0

- Add check for presence of loop.is_closed() method before call the
  former #378


0.16.1 (05-27-2015)
-------------------

- Fix regression in static file handling #377

0.16.0 (05-26-2015)
-------------------

- Unset waiter future after cancellation #363

- Update request url with query parameters #372

- Support new `fingerprint` param of TCPConnector to enable verifying
  ssl certificates via md5, sha1, or sha256 digest #366

- Setup uploaded filename if field value is binary and transfer
  encoding is not specified #349

- Implement `ClientSession.close()` method

- Implement `connector.closed` readonly property

- Implement `ClientSession.closed` readonly property

- Implement `ClientSession.connector` readonly property

- Implement `ClientSession.detach` method

- Add `__del__` to client-side objects: sessions, connectors,
  connections, requests, responses.

- Refactor connections cleanup by connector #357

- Add `limit` parameter to connector constructor #358

- Add `request.has_body` property #364

- Add `response_class` parameter to `ws_connect()` #367
